# my_first_package

./: CHANGELOG.txt  LICENSE.txt  MANIFEST.in  README.md  setup.cfg  setup.py
examples/: example_2.py  example_3.py  example_4.py  parallax_moving_horizontal_background.py  particle_system_example.py
kct_pygame_tools/: __init__.py  image.py  particles.py
kct_pygame_tools/examples/: example_3.py  example_5.py  horizontal_scrolling_bg.py  parallax_moving_horizontal_background.py  particle_system_example.py
kct_pygame_tools/ui/: __init__.py  background.py  fonts.py
kct_pygame_utils/ui/: __init__.py
kctpygameutils/examples/: test_2.py
src/kctpygameutils/: image.py  particles.py
src/kctpygameutils/examples/: test_1.py  test_4.py  test_5.py
src/kctpygameutils/ui/: fonts.py
