[project]
name = "kct_pygame_utils"
version = "0.0.1"
authors = [
  { name="KidCoderT", email="tejas75o25@gmail.com" },
]
description = "A simple python library that provides utilities for pygame games"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/KidCoderT/my_first_packaget"
"Bug Tracker" = "https://github.com/KidCoderT/my_first_package/issues"

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src